--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <h1>Odin Recipes</h1>
    <ul>
-    <li><a href="recipes/stirfry.html">Stir Fry</a></li>
-    <li><a href="recipes/Risotto.html">Risotto</a></li>
+    <li><a href="odin-recipes/stirfry.html">Stir Fry</a></li>
+    <li><a href="odin-recipes/Risotto.html">Risotto</a></li>
    </ul> 
   </body>
 </html>
