Fix missing closing tag

--- a/Recipes/Risotto.html
+++ b/Recipes/Risotto.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>Risotto/h1>
+    <h1>Risotto</h1>
     <img src="Risotto.png" alt="Risotto">
     <p>This is a recipe for a delicious Risotto. It's easy to make and healthy!</p>
     <h3>Ingredients</h3>
